--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,81 +72,81 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Appcompat and Constraint Layout
-    compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support.constraint:constraint-layout:$rootProject.constraintsLibraryVersion" // Constraints layout
-    compile "com.android.support:design:$rootProject.supportLibraryVersion" // snackbar, floating action bar
-    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion" // Cardview
+    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
+    implementation "com.android.support.constraint:constraint-layout:$rootProject.constraintsLibraryVersion" // Constraints layout
+    implementation "com.android.support:design:$rootProject.supportLibraryVersion" // snackbar, floating action bar
+    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion" // Cardview
 
     // Test
-    testCompile "junit:junit:$rootProject.junitVersion"
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion", {
+    testImplementation "junit:junit:$rootProject.junitVersion"
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs'
     })
 
     // Dagger
-    compile "com.google.dagger:dagger:$rootProject.daggerVersion"
+    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
-    provided 'javax.annotation:jsr250-api:1.0'
+    compileOnly 'javax.annotation:jsr250-api:1.0'
 
     // Butterknife
-    compile "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
+    implementation "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterKnifeVersion"
 
     // EventBus
-    compile "org.greenrobot:eventbus:$rootProject.eventBusVersion"
+    implementation "org.greenrobot:eventbus:$rootProject.eventBusVersion"
 
     // Jelly Toolbar
-    compile "com.github.yalantis:jellytoolbar:$rootProject.jellyToolbar"
+    implementation "com.github.yalantis:jellytoolbar:$rootProject.jellyToolbar"
 
     // Animation library
-    compile 'com.android.support:support-compat:25.3.1'
-    compile 'com.daimajia.easing:library:2.0@aar'
-    compile 'com.daimajia.androidanimations:library:2.3@aar'
+    implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 
     // Retrofit
-    compile "com.squareup.retrofit2:retrofit:$rootProject.retroFitVersion"
-    compile "com.squareup.retrofit2:converter-gson:$rootProject.retroFitVersion"
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retroFitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retroFitVersion"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     // RXJava
-    compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
 
     // RXJava Retrofit adapter
-    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$rootProject.rxjavaAdapterVersion"
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$rootProject.rxjavaAdapterVersion"
 
 //    // Guava
-//    compile "com.google.guava:guava:$rootProject.guavaVersion"
+//    implementation "com.google.guava:guava:$rootProject.guavaVersion"
 
     // Picasso
-    compile "com.squareup.picasso:picasso:$rootProject.picassoVersion"
+    implementation "com.squareup.picasso:picasso:$rootProject.picassoVersion"
 
     // PhotoView for zoom in out
-    compile "com.github.chrisbanes:PhotoView:$rootProject.photoViewVersion"
+    implementation "com.github.chrisbanes:PhotoView:$rootProject.photoViewVersion"
 
     // Greedo 500px
-    compile "com.fivehundredpx:greedo-layout:$rootProject.greedoVersion"
+    implementation "com.fivehundredpx:greedo-layout:$rootProject.greedoVersion"
 
     // Floating Action Button
-    compile "io.github.yavski:fab-speed-dial:$rootProject.fabVersion"
+    implementation "io.github.yavski:fab-speed-dial:$rootProject.fabVersion"
 
     // Permission Dispatchxer
-    compile("com.github.hotchemi:permissionsdispatcher:$rootProject.permissionDispatcherVersion") {
+    implementation("com.github.hotchemi:permissionsdispatcher:$rootProject.permissionDispatcherVersion") {
         // if you don't use android.app.Fragment you can exclude support for them
         exclude module: "support-v7"
     }
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$rootProject.permissionDispatcherVersion"
 
     // Spark Button
-    compile "com.github.varunest:sparkbutton:$rootProject.sparkButtonVersion"
+    implementation "com.github.varunest:sparkbutton:$rootProject.sparkButtonVersion"
 
     // Glide
-    compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
 
     // Toasty
-    compile "com.github.GrenderG:Toasty:$rootProject.toastyVersion"
+    implementation "com.github.GrenderG:Toasty:$rootProject.toastyVersion"
 }
